--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-asgiref==3.7.2
-colorama==0.4.6
+asgiref==3.3.1
 coverage==5.3.1
 Django==3.1.5
-exceptiongroup==1.1.1
 flake8==3.8.4
-iniconfig==2.0.0
-mccabe==0.7.0
-packaging==23.1
-pluggy==1.0.0
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pytest==7.3.2
-pytest-cov==4.1.0
-sqlparse==0.4.4
-tomli==2.0.1
-typing_extensions==4.6.3
-tzdata==2023.3
+mccabe==0.6.1
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pytz==2020.5
+sqlparse==0.4.1
